--- a/app/src/main/res/layout-sw600dp/fragment_account.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_account.xml
@@ -32,7 +32,7 @@
                 android:padding="40dp">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageProfile"
                     android:layout_width="160dp"
                     android:layout_height="86dp"
                     android:layout_weight="1"
