--- a/app/src/main/res/layout-sw600dp/fragment_home.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_home.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/homeLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -39,7 +39,7 @@
                 android:text="@string/saving"
                 android:textColor="#0E3033"
                 android:textSize="36sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/homeLogo"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -71,7 +71,7 @@
                 android:id="@+id/income"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/income"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
